--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">   
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css">
     <title>Zoom</title>
 </head>
@@ -12,137 +12,150 @@
     <div class="debug">
         <!-- inizio main  -->
         <main class="flex">
-            <div class="setting"></div>
+            <div class="settings flex">
+				<div class="view flex">
+					<i class="fas fa-grip-horizontal fa-2x"></i>
+					<span>Speaker View</span>
+				</div>
+				<div class="expand flex">
+					<i class="fas fa-expand-arrows-alt fa-2x"></i>
+				</div>
+			</div>
             <div class="left flex">
-                    <a href=""></a>
+                    <a href=""><i class="fas fa-caret-left fa-3x"></i></a>
                     <p></p>
             </div>
             <div class="main-2 flex">
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Josh Witty</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay">Elizabeth Swan</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Lynna Hu</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> John Mensik</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Jeff Bechtel</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Rob Rinsky</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Mitchel Mays</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Angeline Huynh</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Tamara Pitts</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Zhenghang Gu</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Shari Clare</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Winston Twu</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay">James Desmond-Denve</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Rozette Pasahol</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Huey Le - Zoom CSM</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Jenny Eggimann</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Subriah Esharc</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Heather Jarrett</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Justin Henry</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay">Matt Caballero</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> George Bassil</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Kerushan Bisetty</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> John Poje</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Brian McIntyre</div>
                 </div>
 
                 <div class="people">
-                    <img src="" alt="">
-                    <div class="overlay"></div>
+                    <img src="img/People.jpg" alt="People">
+                    <div class="overlay">Farah Faraclas</div>
                 </div>
             </div>
+            <div class="right flex">
+				<a href=""><i class="fas fa-caret-right fa-3x"></i></a>
+				<span>1/2</span>
+			</div>
 
 
         </main>
