--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/style.css">
     <title>Zoom</title>
@@ -23,7 +26,7 @@
 			</div>
             <div class="left flex">
                     <a href=""><i class="fas fa-caret-left fa-3x"></i></a>
-                    <p></p>
+                    <p>1/2</p>
             </div>
             <div class="main-2 flex">
                 <div class="people">
@@ -147,7 +150,7 @@
                     <div class="overlay"><i class="fas fa-microphone-alt-slash fa-flip-horizontal"></i> Brian McIntyre</div>
                 </div>
 
-                <div class="people">
+                <div class="people attivo">
                     <img src="img/People.jpg" alt="People">
                     <div class="overlay">Farah Faraclas</div>
                 </div>
@@ -160,7 +163,10 @@
 
         </main>
         <!-- fine main  -->
+
     </div>
+
+    
     
 </body>
 </html>
