--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
     <title>Zoom</title>
 </head>
 <body>
-    <div class="debug">
+    <!-- <div class="debug"> -->
         <!-- inizio main  -->
         <main class="flex">
             <div class="settings flex">
 				<div class="view flex">
-					<i class="fas fa-grip-horizontal fa-2x"></i>
+					<i class="fas fa-grip-horizontal fa-1x"></i>
 					<span>Speaker View</span>
 				</div>
 				<div class="expand flex">
-					<i class="fas fa-expand-arrows-alt fa-2x"></i>
+					<i class="fas fa-expand-arrows-alt fa-1x"></i>
 				</div>
 			</div>
             <div class="left flex">
-                    <a href=""><i class="fas fa-caret-left fa-3x"></i></a>
+                    <a href=""><i class="fas fa-caret-left fa-2x"></i></a>
                     <p>1/2</p>
             </div>
             <div class="main-2 flex">
@@ -156,17 +156,83 @@
                 </div>
             </div>
             <div class="right flex">
-				<a href=""><i class="fas fa-caret-right fa-3x"></i></a>
+				<a href=""><i class="fas fa-caret-right fa-2x"></i></a>
 				<span>1/2</span>
 			</div>
-
-
         </main>
         <!-- fine main  -->
+    <!-- </div> -->
 
-    </div>
-
-    
+    <footer class="flex">
+			<div class="footer-left flex">
+				<div id="mic-settings" class="flex menu">
+					<div class="flex icon">
+						<i class="fas fa-microphone fa-1x"></i>
+						<span>Mute</span>
+					</div>
+					<div class="up-arrow">
+						<i class="fas fa-chevron-up"></i>
+					</div>
+				</div>
+				<div  class="flex menu">
+					<div class="flex icon">
+						<i class="fas fa-video fa-1x"></i>
+						<span>Stop Video</span>
+					</div>
+					<div class="up-arrow">
+						<i class="fas fa-chevron-up"></i>
+					</div>
+				</div>
+			</div>
+			<div class="footer-main flex">
+				<div id="invite" class="flex icon">
+					<i class="fas fa-user-plus fa-1x"></i>
+					<span>Invite</span>
+				</div>
+				<div  class="flex icon">
+					<div class="flex">
+						<i class="fas fa-user-friends fa-1x"></i>
+						<span class="partecipants">28</span>
+					</div>
+					<span>Manage Partecipants</span>
+				</div>
+				<div  class="flex icon">
+					<i class="far fa-chart-bar fa-1x"></i>
+					<span>Polling</span>
+				</div>
+				<div  class="flex menu">
+					<div class="icon flex">
+						<i class="fas fa-share-alt fa-1x"></i>
+						<span>Share Screen</span>
+					</div>
+					<div class="up-arrow">
+						<i class="fas fa-chevron-up"></i>
+					</div>
+				</div>
+				<div  class="flex icon">
+					<i class="far fa-comment-dots fa-1x"></i>
+					<span>Chat</span>
+				</div>
+				<div  class="flex icon">
+					<div class="icon">
+						<i class="fas fa-circle fa-1x"></i>
+						<i class="fas fa-chevron-up fa-xs"></i>
+					</div>
+					<span>Record</span>
+				</div>
+				<div  class="flex icon">
+					<i class="fas fa-border-all fa-1x"></i>
+					<span>Breakout Rooms</span>
+				</div>
+				<div  class="flex icon">
+					<i class="fas fa-ellipsis-h fa-1x"></i>
+					<span>More</span>
+				</div>
+			</div>
+			<div class="footer-right flex">
+				<a class="end" href="">End Meeting</a>
+			</div>
+		</footer>
     
 </body>
 </html>
